packages/tree-sitter-cave/test/corpus/values.txt
==================
value with compound unit, uncertainty, context and confidence
==================
OpenAI HAS revenue: ~20B USD/yr +/- 2B USD/yr @2026-Q1 @ 90%
---

(document
  (claim_line
    (entity)
    (verb)
    (attr_value
      (attribute)
      (value
        (number)
        (unit)))
    (uncertainty
      (value
        (number)
        (unit)))
    (context)
    (confidence)))

==================
sigma level override
==================
OpenAI HAS revenue: 20B USD/yr +/- 2B USD/yr (1σ)
---

(document
  (claim_line
    (entity)
    (verb)
    (attr_value
      (attribute)
      (value
        (number)
        (unit)))
    (uncertainty
      (value
        (number)
        (unit)))
    (sigma)))

==================
glued simple unit
==================
auth/key HAS expiry: 3600s !
---

(document
  (claim_line
    (entity)
    (verb)
    (attr_value
      (attribute)
      (value
        (number)))
    (importance)))

==================
count with unit word
==================
pool HAS max: 20 conn
---

(document
  (claim_line
    (entity)
    (verb)
    (attr_value
      (attribute)
      (value
        (number)
        (unit)))))

==================
date-like value
==================
Anthropic HAS ipo-timing: 2026-H2 @ 40%
---

(document
  (claim_line
    (entity)
    (verb)
    (attr_value
      (attribute)
      (value
        (number)))
    (confidence)))

==================
atom attribute value
==================
auth/middleware HAS topic: security
---

(document
  (claim_line
    (entity)
    (verb)
    (attr_value
      (attribute)
      (entity))))

==================
trajectory value with shared unit and range context
==================
revenue IS 20B -> 40B USD/yr @2025..2028
---

(document
  (claim_line
    (entity)
    (verb)
    (value
      (number)
      (number)
      (unit))
    (context)))

==================
trajectory with glued units
==================
db/query-time IS 5ms -> 800ms @2026-04-10..04-11
---

(document
  (claim_line
    (entity)
    (verb)
    (value
      (number)
      (number))
    (context)))

==================
negative scalar and trajectory values
==================
temperature IS -12.5C
balance IS ~-20 -> -5 USD @2025..2028
---

(document
  (claim_line
    (entity)
    (verb)
    (value
      (number)))
  (claim_line
    (entity)
    (verb)
    (value
      (number)
      (number)
      (unit))
    (context)))

==================
Unicode entity names and attributes
==================
München HAS température: -3.5 C
東京 CONTAINS 渋谷
café/équipe USES PostgreSQL
---

(document
  (claim_line
    (entity)
    (verb)
    (attr_value
      (attribute)
      (value
        (number)
        (unit))))
  (claim_line
    (entity)
    (verb)
    (object
      (entity)))
  (claim_line
    (entity)
    (verb)
    (object
      (entity))))
